// Copyright 2023 The Elastic AI Search Authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax="proto2";
package EA.servlet;
option cc_generic_services = true;

enum ErrCode {
    /// for all success
    SUCCESS                     = 0;
    UNKNOWN_REQ_TYPE            = 1;
    INTERNAL_ERROR              = 2;
    /// for raft and raft machine
    NOT_LEADER                  = 3;
    RETRY_LATER                 = 4;
    EXEC_FAIL                   = 5;
    PEER_NOT_EQUAL              = 6;
    /// for pb

    PARSE_FROM_PB_FAIL          = 11;
    PARSE_TO_PB_FAIL            = 12;
    JSON_FROM_PB_FAIL           = 13;
    PB_TO_JSON_FAIL             = 14;

    INPUT_PARAM_ERROR           = 21;
    HAVE_NOT_INIT               = 22;

    CONFIG_EXISTS               = 31;
    CONFIG_VERSION_OLD          = 32;
    CONFIG_NOT_EXISTS           = 33;
    CONFIG_NOT_EXISTS_VERSION   = 34;
};